Revert "Fixed incorrect page width on mobile devices"

--- a/styles/templates/default/css/top.css
+++ b/styles/templates/default/css/top.css
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-  min-width: fit-content;
+  min-width: 760px;
   color: #000000;
   background: #E3E3E3;
 }
